# rustdesk-server-admin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-rocky.yml  manual-binaries.yml
scripts/: rustdesk-server-admin.env.example  rustdesk-server-admin.service  rustdesk-server-admin.sh
src/: auth.rs  config.rs  db.rs  main.rs  peers.rs
