[package]
name = "rustdesk-server-admin"
version = "0.1.0"
edition = "2021"
description = "Web admin dashboard for self-hosted RustDesk server (hbbs/hbbr)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tdimitriou/rustdesk-server-admin"
readme = "README.md"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
