[package]
name = "rustdesk-server-admin"
version = "0.1.0"
edition = "2021"
description = "Web admin dashboard for self-hosted RustDesk server (hbbs/hbbr)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tdimitriou/rustdesk-server-admin"
readme = "README.md"

[dependencies]
axum = "0.8"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# Static SQLite for portable Linux builds (e.g. cross x86_64-unknown-linux-musl in CI).
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
